# audio-scraper

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
audio_scraper/: audio_filter.py  audio_segmenter.py  audio_splitter.py  main.py  pipeline.py  transcriber.py  transcript_filter.py  youtube_channel_scraper.py
