[tool.poetry]
name = "audio-scraper"
version = "0.1.0"
description = "Scrapes and processes speech audio from web sources."
authors = ["Stephen Melsom <sjmelsom@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "audio_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2022.11.11"
transformers = "^4.25.1"
librosa = "^0.9.2"
torch = "^1.13.1"
pydub = "^0.25.1"
toml = "^0.10.2"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pendulum = "^2.1.2"
pytest = "^7.2.0"
pylint = "^2.15.9"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
collect-data = "audio_scraper.pipeline:collect"
